@@ -37,6 +37,12 @@ info devices
      lane="simd-lane-id" information if the breakpoint is thread and SIMD lane
      spefific.
 
+  ** '-thread-info'
+
+     If a thread is stopped, available, and has SIMD lanes, MI output
+     of '-thread-info' for such a thread contains 'execution-mask' and
+     'simd-width' fields.
+
 *** Changes in GDB 13
 
 * MI version 1 is deprecated, and will be removed in GDB 14.
@@ -621,6 +627,9 @@ S+core				score-*-*
 * New native configurations
 
 GNU/Linux/OpenRISC		or1k*-*-linux*
+
+  ** '-thread-info' result output includes new fields: execution-mask and
+     simd-width, if the thread has SIMD lanes.
 
 *** Changes in GDB 11
 
